fix(ShareAutosuggest): Align correctly loading state
Following the addition of the chips in the sharing input and the cozy-ui updates, the spinner was aligned at the top of the input. This commit allows it to be centred again

--- a/packages/cozy-sharing/src/styles/autosuggest.styl
+++ b/packages/cozy-sharing/src/styles/autosuggest.styl
@@ -33,6 +33,7 @@
 .recipientsContainer
     display flex
     flex-wrap wrap
+    align-items center
     padding .25rem .5rem
     border-radius .25rem
     border 1px solid var(--borderMainColor)
@@ -55,7 +56,7 @@
         &:hover
         &:focus
             border none
-        &:only-child
+        &:first-child
           padding .25rem .5rem
 
 .recipientChip
